refactor: applying fixes proposed by code analysis and removed non-necessary codes